# multi-rag

./: .env  .gitignore  .gitmodules  RAG.py  README.md  UI.html  UI_backup.html  UI_backup_utf8.html  agents.py  analyze_results.py  chat_history.json  check_recall.py  cli.py  data.index  data.pkl  download_dataset.py  eval_omnidocbench.py  eval_results_sailor_inference.csv  eval_results_sailor_inference.json  eval_sailor.py  eval_traditional_rag.py  eval_zero_shot.py  init.py  llm.py  llm_ollama.py  loader.py  main.py  pdf_parser.py  pipeline_diagram.html  prepare_sailor.py  pyproject.toml  requirements.txt  retriever.py  scifact_pipeline.py  stats.json  test.py  test_rag_with_llm.py
core/: agents.py  llm.py  pdf_parser.py  retriever.py
evaluation/: eval_omnidocbench.py  eval_ragas_only.py  eval_sailor.py  eval_traditional_rag.py  eval_zero_shot.py
hackathon_version/: RAG.py  README.md  UI.html  UI_backup2.html  data.pkl  init.py  llm.py  main.py  mineru_trigger.py  pipeline_diagram.html  test_rag_with_llm.py
pdf/: FARPC Bảng kê Hoàng Đức Hiệu.xlsx
pipelines/: scifact_pipeline.py
scifact_output/: results_topk_10.json  results_topk_15.json  results_topk_20.json  results_topk_25.json  results_topk_30.json  results_topk_50.json
scratch/: check_ds_size.py
system_promt/: agent1.txt  agent2.txt  agent3.txt  rag.txt  rag_vn.txt
tools/: check_recall.py  convert_images_to_pdf.py  repair_results.py  results.py  show_metrics.py
traditional_rag_eval_03_05_2026_02_03/: traditional_rag_inference.csv  traditional_rag_inference.json
ver1 sailor ans/: ans.txt
(+23 files in other folders)
