[project]
name = "hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "faiss-cpu>=1.13.2",
    "immutabledict>=4.3.1",
    "kagglehub>=1.0.0",
    "nltk>=3.9.4",
    "pillow>=12.2.0",
    "pymupdf>=1.27.2.2",
    "rank-bm25>=0.2.2",
    "requests>=2.33.1",
    "sentence-transformers>=5.3.0",
    "sentencepiece>=0.2.1",
    "torch>=2.11.0",
]
