[project]
name = "hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docx2txt>=0.9",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.13.2",
    "immutabledict>=4.3.1",
    "kagglehub>=1.0.0",
    "llama-index>=0.14.16",
    "llama-index-llms-groq>=0.5.0",
    "nltk>=3.9.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pillow>=12.2.0",
    "pymupdf>=1.27.2.2",
    "ragas>=0.3.2",
    "rank-bm25>=0.2.2",
    "requests>=2.33.1",
    "sentence-transformers>=5.3.0",
    "sentencepiece>=0.2.1",
    "torch>=2.11.0",
]
